# oktopus

./: CHANGELOG.md  Cargo.toml  README.md
.githooks/: pre-commit
.github/workflows/: ci.yml  release.yml
docs/: package.json
lib/bignum/: Cargo.toml
lib/bignum/src/: lib.rs  ops.rs  prelude.rs
oktopus-node/: Cargo.toml
oktopus-wallet/: Cargo.toml
structure/: Cargo.toml
